--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,7 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#00ffff99",
     "titleBar.inactiveForeground": "#15202b99"
-  }
+  },
+
+  "python.analysis.extraPaths": ["./selenium_click"]
 }
