--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ starlette = "^0.45.0"
 python-dotenv = "^1.0.1"
 pydantic = "^2.10.4"
 pydantic-settings = "^2.7.0"
+pyautogui = "^0.9.54"
 
 
 [tool.poetry.group.dev.dependencies]
